[package]
name = "UniAxNft"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
thiserror = "2.0.17"
serde = "1.0.228"
serde_json = "1.0"

# sql-db 
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres"] }

# http client
reqwest = { version = "0.12", features = ["json", "multipart"] }

# solana
solana-sdk = "3.0.0"
solana-client = "3.1.2"
